# OpenCV_Template

./: CMakeLists.txt  main.cpp
